remove unnecessary link margin right; workaround for styledown issue which removed whitespace between closing anchor tag and the follwing text content

--- a/src/mixins/_link.scss
+++ b/src/mixins/_link.scss
@@ -1,7 +1,6 @@
 @mixin uicc-link($is-unobtrusive: false) {
   transition: color .2s ease-in-out;
   display: inline-block;
-  margin-right: 0.3em;
   color: $uicc-link-color;
   text-decoration: underline;
 
